--- a/src/style.css
+++ b/src/style.css
@@ -13,10 +13,17 @@ body{
     width: 70%;
     height: 40px;
     font-size: 24px;
+    color: grey;
+    background: black;
     border: none;
-    border-radius: 25px;
-    text-align: center;
+    text-align: left;
 }
+
+#search_bar{
+    border-bottom: 1px solid grey;
+    text-align: left;
+}
+
 
 #search-button{
     border-radius: 25px;
@@ -25,13 +32,20 @@ body{
 }
 
 #games-list{
-    color: greenyellow;
+    color: white;
     list-style: none;
+    font-family: consolas;
+    padding: 0;
 }
 
+#glass{
+    width: 5%;
+    margin: 0;
+}
 
 li{
-    padding: 10px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     text-align: left;
-    border: 1px solid greenyellow;
+    border-bottom: 0.5px solid white;
 }
