--- a/src/style.css
+++ b/src/style.css
@@ -65,20 +65,44 @@ li{
     color: white;
     font-family: 'Roboto', sans-serif;
     background: rgb(88, 88, 88);
+    border-radius: 20px;
     /* border-bottom: 0.5px solid rgb(219, 219, 219); */
 }
 
 .game-image{
     width: 250px;
     height: 140px;
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+    float: left;
 }
 
 h4, p{
-    display: inline;
-    padding: 20px;
+    display: inline-block;
+    padding-left: 2em;
 }
 
 
 .w3-button{
     float: right;
+    border: none;
+    padding: 10px;
+    background: black;
+    color: white;
+    border-top-right-radius: 20px;
+}
+
+
+.list-button{
+    float: right;
+    border: none;
+    padding: 10px;
+    width: 10em;
+    background: black;
+    color: white;
+}
+
+.w3-button:hover, .list-button:hover{
+    background: green;
+    cursor: pointer;
 }
