--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,7 @@ body, html{
     height: 40px;
 }
 
+
 #games-list-container{
     padding-top: 40px;
 }
@@ -102,8 +103,8 @@ body, html{
 
 .game:hover{
     color: black;
-    margin: 22px;
-    transform: scale(1.2);
+    margin: 17px;
+    transform: scale(1.1);
     background-color: grey;
     /* border-radius: 20px; */
     /* border-bottom: 0.5px solid rgb(219, 219, 219); */
@@ -119,7 +120,7 @@ body, html{
 
 h4, p{
     display: inline-block;
-    padding-left: 2em;
+    padding: 2em;
     cursor: pointer;
 }
 
@@ -142,9 +143,15 @@ h4, p{
     /* border-top-right-radius: 20px; */
 }
 
+.btn-toolbar{
+    float: right;
+}
+
 
 
 .list-button{
+    position: sticky;
+    top: 0;
     float: right;
     border: none;
     padding: 10px;
