--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,27 @@ body, html{
     padding: 10px 0px;
 }
 
+#games-list-table{
+    border: 2px solid black;
+    background: rgb(53, 53, 53);
+    font-family: consolas;
+    color: white;
+    width: 60%;
+    margin: 0 auto;
+    padding: 10px 0px;
+}
+
+td,th{
+    border: 2px solid black;
+    overflow: hidden;
+}
+
+tr{
+    border: 2px solid black;
+    overflow: hidden;
+    height: 50px;
+}
+
 #glass{
     width: 5%;
     margin: 0;
@@ -118,9 +139,19 @@ body, html{
     float: left;
 }
 
+.table-image{
+    width: 100%;
+    height: 140px;
+}
+
+.image-col
+{
+    width: 300px;
+}
+
 h4, p{
     display: inline-block;
-    padding: 2em;
+    padding: 1em;
     cursor: pointer;
 }
 
